# pawan

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile
docs/html/: annotated.html  class____wake-members.html  class____wake.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f4d6630b342500774960aa34340b77a8.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  gsl__complex__utils_8h.html  gsl__complex__utils_8h_source.html  gsl__utils_8h.html  gsl__utils_8h_source.html  index.html  wake_8cpp.html  wake_8h.html  wake_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
docs/man/man3/: __wake.3  gsl_complex_utils.h.3  gsl_utils.h.3  wake.cpp.3  wake.h.3
scripts/: Master.py  plotDiagnostics.py  plotVRing.py  plotWake.py  readDiagnostics.py  readWake.py
scripts/Plot/: XY.py  make_pretty.py  utils.py
scripts/Tecplot/: plot.py  utils.py
src/: pawan.cpp
src/integration/: CMakeLists.txt  integration.cpp  integration.h  integration.vim  rk3.cpp  rk3.h  rk4.cpp  rk4.h
src/interaction/: CMakeLists.txt  cuda_utils_cu.h  gaussian.h  highorder.h  interaction.cpp  interaction.h  interaction.vim  interaction_utils.h  interaction_utils_cu.cu  interaction_utils_cu.h  la_utils.h  la_utils_cu.h  math_utils_cu.h  parallel.cpp  parallel.h  parallel_gpu.h  test_omp.cpp  testcuda1.cu  testcuda1.h
src/io/: CMakeLists.txt  io.cpp  io.h  io.vim
src/networkinterface/: networkdatastructures.h  networkinterface.cpp  networkinterface.h
src/resolve/: CMakeLists.txt  resolve.cpp  resolve.h
src/system/: CMakeLists.txt  system.cpp  system.h
src/utils/: gsl_complex_utils.h  gsl_utils.h  print_utils.h  timing_utils.h
src/wake/: CMakeLists.txt  ring.cpp  ring.h  square.cpp  square.h  vring.cpp  vring.h  wake.cpp  wake.h  wake.vim  wake_utils.h
validationdata/Savedfigs/: AngularImpulse.pgf  CentroidPos.pgf  Helicity.pgf  KE_rate.pgf  NormalisedEnstrophy(div-free).pgf  NormalisedEnstrophy.pgf  NormalisedKineticEnergy(div-free).pgf  NormalisedKineticEnergy.pgf  NormalisedLinearImpulse.pgf  TotalVorticity.pgf  Vc.pgf  nue.pgf
validationdata/Valentin2022/: fig5a_dkedt.csv  fig5a_vi.csv  fig5a_vi_nondim.csv  fig5b_dkedt.csv  fig5b_nue.csv  fig5b_vi.csv  fig5b_vi_nondim.csv  fig8a_e.csv  fig8a_ef.csv  fig8a_ke_kef.csv  fig8b_e_ef.csv  fig8b_ke_kef.csv
validationdata/Winckelmanns1989/: figJ35_dXcdt_nc4.csv  figJ35_dXcdt_nc5.csv  figJ35_e.csv  figJ35_ef.csv  figJ36_dXcdt_nc4.csv  figJ36_dXcdt_nc5.csv  figJ36_dXcdt_nc6.csv  figJ36_e_ef.csv  figJ36_ke.csv  figJ36_li.csv  figJ43_e.csv  figJ43_ef.csv  figJ43_ke_kef.csv  figJ43_li.csv  figJ45_ke_kef.csv  figJ45_li.csv
