add_library(interaction SHARED interaction.cpp parallel.cpp cuda_utils_cu.h)
find_package(CUDA)
if(CUDA_FOUND)
    add_library(cuda_acceleration SHARED testcuda1.cu)
    target_link_libraries(interaction PUBLIC cuda_acceleration)
endif(CUDA_FOUND)
target_compile_features(interaction PUBLIC cxx_constexpr)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fopenmp -lpthread -O3 -lgsl -lm")
