add_library(interaction SHARED interaction.cpp parallel.cpp)
find_package(CUDA)
if(CUDA_FOUND)
    add_library(cuda_parallel SHARED interaction_utils_cu_2.cu)
    target_link_libraries(interaction PUBLIC cuda_parallel)
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -rdc=true -gencode arch=compute_60,code=sm_60")
endif(CUDA_FOUND)
target_compile_features(interaction PUBLIC cxx_constexpr)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fopenmp -lpthread -O3 -lgsl -lm")
